samples/_failures_safe/1761308520_ca6546_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1a9cd18.c: In function ‘main’:
./samples/SAFE/__tmp_f1a9cd18.c:143:13: error: expected expression at end of input
  143 |             read_matrix(rows, cols,
      |             ^~~~~~~~~~~
./samples/SAFE/__tmp_f1a9cd18.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f1a9cd18.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f1a9cd18.c:143:13: error: expected declaration or statement at end of input
